.footer{       position: fixed;         left: 0;         bottom: 0;         width: 100%;         text-align: center; }

--- a/src/css-style.css
+++ b/src/css-style.css
@@ -2,7 +2,6 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-auto-rows: minmax(100px, auto);
-    padding: 10%;
     gap: 20px;
 
 }
@@ -89,3 +88,14 @@
     width: 25%;
     height: 100%;
 }
+
+.card {
+    display: flex;
+    padding: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    background-color: #f5f5f5;
+}
+
+
+
+
